--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "multer": "^2.0.2",
     "pg": "^8.16.3"
   }
 }
